--- a/shop/website-angular/src/app/shared/location-popup/location-popup.component.html
+++ b/shop/website-angular/src/app/shared/location-popup/location-popup.component.html
@@ -1,7 +1,7 @@
 <mat-card class="location-modal-card auth">
 	<mat-card-title>
 		<h4 class="d-flex">
-			<span class="m-auto"> What is your address?</span>
+			<span class="m-auto">{{ 'WHAT_IS_YOUR_ADDRESS' | translate }}</span>
 			<i
 				md-raised-button
 				md-dialog-close
