--- a/merchant/tablet-ionic/src/pages/+warehouse/product-pictures-popup/product-images-popup.component.html
+++ b/merchant/tablet-ionic/src/pages/+warehouse/product-pictures-popup/product-images-popup.component.html
@@ -12,7 +12,7 @@
 		<ion-row>
 			<e-cu-file-uploader
 				[buttonFullSpace]="true"
-				[name]="firstName?.value"
+				[name]=""
 				[fileUrl]="imagesUrls"
 				[inputCustomStyle]="true"
 				(uploadedImgObj)="addImageObj($event)"
