--- a/merchant/tablet-ionic/src/components/order/make-order/+warehouse-order-modal/warehouse-order-modal.component.html
+++ b/merchant/tablet-ionic/src/components/order/make-order/+warehouse-order-modal/warehouse-order-modal.component.html
@@ -1,26 +1,31 @@
-<nb-card id="make-order">
+<div class="nb-card" id="make-order">
+	<div class="nb-card-header header-color">
+		<div class="pull-left" *ngIf="showOrderAction">
+			{{ TRANSLATE_PREFIXES.MAKE_ORDER | translate }}
+		</div>
 
-    <nb-card-header class="header-color">
-        <div class="pull-left" *ngIf="showOrderAction">
-            {{ TRANSLATE_PREFIXES.MAKE_ORDER | translate }}
-        </div>
+		<div class="checkbox" *ngIf="!showOrderAction">
+			<label>
+				<input type="checkbox" (change)="toggleAvalableProducts()" />
+				{{ TRANSLATE_PREFIXES.ONLY_AVAILABLE | translate }}
+			</label>
+		</div>
+	</div>
 
-        <div class="checkbox" *ngIf="!showOrderAction">
-            <label>
-                <input type="checkbox" (change)="toggleAvalableProducts()">
-                {{ TRANSLATE_PREFIXES.ONLY_AVAILABLE | translate }}
-            </label>
-        </div>
-    </nb-card-header>
+	<div class="nb-card-body">
+		<ng2-smart-table
+			[settings]="settingsSmartTable"
+			[source]="sourceSmartTable"
+		></ng2-smart-table>
+	</div>
 
-    <nb-card-body>
-        <ng2-smart-table [settings]="settingsSmartTable" [source]="sourceSmartTable"></ng2-smart-table>
-    </nb-card-body>
-
-    <nb-card-footer *ngIf="showOrderAction">
-        <button (click)="makeOrder()" [disabled]="!canOrder" class="btn btn-sm btn-primary">
-            {{ TRANSLATE_PREFIXES.ORDER | translate }}
-        </button>
-    </nb-card-footer>
-
-</nb-card>
+	<div class="nb-card-footer" *ngIf="showOrderAction">
+		<button
+			(click)="makeOrder()"
+			[disabled]="!canOrder"
+			class="btn btn-sm btn-primary"
+		>
+			{{ TRANSLATE_PREFIXES.ORDER | translate }}
+		</button>
+	</div>
+</div>
