feat(ever-admin): added vertical Wizard with steps in Merchants Setup page - Admin app EV-1187

--- a/admin/website-angular/src/app/@theme/styles/styles.scss
+++ b/admin/website-angular/src/app/@theme/styles/styles.scss
@@ -183,3 +183,17 @@ ea-product-create .card-footer {
 .ng-select .ng-select-container .ng-value-container .ng-input > input {
 	height: auto !important;
 }
+
+.setup-merchants-page {
+	nb-stepper {
+		.step-content {
+			width: 100%;
+			text-align: center;
+
+			button {
+				margin: 8px;
+				border: 0;
+			}
+		}
+	}
+}
