--- a/admin/website-angular/src/app/pages/+setup/+merchants/merchants.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/merchants.component.html
@@ -2,7 +2,86 @@
 	<div class="row">
 		<div class="col-md-9">
 			<nb-card>
-				<nb-card-body> </nb-card-body>
+				<nb-card-body>
+					<nb-stepper orientation="vertical">
+						<nb-step label="Account">
+							<h3>Account</h3>
+
+							<button nbButton disabled nbStepperNext>
+								PREV
+							</button>
+							<button nbButton nbStepperNext>NEXT</button>
+						</nb-step>
+						<nb-step label="Basic info">
+							<h3>Basic info</h3>
+
+							<button nbButton nbStepperPrevious>PREV</button>
+							<button nbButton nbStepperNext>NEXT</button>
+						</nb-step>
+						<nb-step label="Contact info">
+							<h3>Contact info</h3>
+
+							<button nbButton nbStepperPrevious>PREV</button>
+							<button nbButton nbStepperNext>NEXT</button>
+						</nb-step>
+						<nb-step label="Location">
+							<h3>Location</h3>
+
+							<button nbButton nbStepperPrevious>PREV</button>
+							<button nbButton nbStepperNext>
+								NEXT
+							</button>
+						</nb-step>
+						<nb-step label="Payments">
+							<h3>Payments</h3>
+
+							<button nbButton nbStepperPrevious>PREV</button>
+							<button nbButton nbStepperNext>
+								NEXT
+							</button>
+						</nb-step>
+						<nb-step label="Manufacturing">
+							<h3>Manufacturing</h3>
+
+							<button nbButton nbStepperPrevious>PREV</button>
+							<button nbButton nbStepperNext>
+								NEXT
+							</button>
+						</nb-step>
+						<nb-step label="Delivery & Takeaway Settings">
+							<h3>Delivery & Takeaway Settings</h3>
+
+							<button nbButton nbStepperPrevious>PREV</button>
+							<button nbButton nbStepperNext>
+								NEXT
+							</button>
+						</nb-step>
+						<nb-step label="Orders Settings">
+							<h3>Orders Settings</h3>
+
+							<button nbButton nbStepperPrevious>PREV</button>
+							<button nbButton nbStepperNext>
+								NEXT
+							</button>
+						</nb-step>
+						<nb-step label="Product categories">
+							<h3>Product categories</h3>
+
+							<button nbButton nbStepperPrevious>PREV</button>
+							<button nbButton nbStepperNext>
+								NEXT
+							</button>
+						</nb-step>
+						<nb-step label="Products">
+							<h3>Products</h3>
+
+							<button nbButton nbStepperPrevious>PREV</button>
+							<button nbButton disabled nbStepperNext>
+								NEXT
+							</button>
+						</nb-step>
+					</nb-stepper>
+				</nb-card-body>
 			</nb-card>
 		</div>
 
