fix(ever-admin): small validation fix in Setup Merchants page Account step - Admin app EV-1188

--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/account/account.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/account/account.component.html
@@ -118,10 +118,12 @@
 					[ngClass]="{
 						'input-danger':
 							(rPassword.invalid ||
-								rPassword.value !== password.value) &&
+								rPassword.value !== password.value ||
+								password.invalid) &&
 							(rPassword.dirty || rPassword.touched),
 						'input-success':
 							rPassword.value === password.value &&
+							password.valid &&
 							(rPassword.dirty || rPassword.touched)
 					}"
 					required
