fix(ever-admin): path on instructions component in Setup Merchants page - Admin app EV-1188

--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/instructions/instructions.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/instructions/instructions.component.html
@@ -2,5 +2,9 @@
 	<nb-card-header>
 		<h5>How to setup {{ stepper.selected.label }}?</h5>
 	</nb-card-header>
-	<nb-card-body> </nb-card-body>
+	<nb-card-body>
+		<div *ngIf="stepper.index === 0">
+			TODO add translate for Account
+		</div>
+	</nb-card-body>
 </nb-card>
