--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/instructions/instructions.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/instructions/instructions.component.html
@@ -4,7 +4,7 @@
 	</nb-card-header>
 	<nb-card-body>
 		<div *ngIf="stepper.index === 0">
-			TODO add translate for Account
+			TODO add instructions for Account
 		</div>
 	</nb-card-body>
 </nb-card>
