feat(ever-admin): initialize step "Basic info", in Setup Merchants page - Admin app EV-1189

--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/instructions/instructions.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/instructions/instructions.component.html
@@ -6,5 +6,8 @@
 		<div *ngIf="stepper.index === 0">
 			TODO add instructions for Account
 		</div>
+		<div *ngIf="stepper.index === 1">
+			TODO add instructions for Basic info
+		</div>
 	</nb-card-body>
 </nb-card>
