--- a/admin/website-angular/src/app/pages/+setup/+merchants/merchants.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/merchants.component.html
@@ -21,7 +21,7 @@
 							</button>
 						</nb-step>
 						<nb-step label="Basic info">
-							<h3>Basic info</h3>
+							<ea-merchants-setup-basic-info></ea-merchants-setup-basic-info>
 
 							<button nbButton nbStepperPrevious>PREV</button>
 							<button nbButton nbStepperNext>NEXT</button>
