--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/basic-info/basic-info.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/basic-info/basic-info.component.html
@@ -11,7 +11,7 @@
 					id="name"
 					name="name-input"
 					placeholder="Name"
-					[(ngModel)]="basicInfo.name"
+					[(ngModel)]="basicInfoModel.name"
 					#name="ngModel"
 					[ngClass]="{
 						'input-danger':
