--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/basic-info/basic-info.component.scss
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/basic-info/basic-info.component.scss
@@ -2,4 +2,23 @@
 	nb-card-body {
 		text-align: left;
 	}
+
+	.preview-img {
+		padding-right: 16px;
+	}
+
+	.img-rounded {
+		margin-top: 3px;
+		max-height: 70px;
+	}
+
+	.remove-icon {
+		cursor: pointer;
+
+		span {
+			padding-right: 7px;
+			position: absolute;
+			font-size: 1.1em;
+		}
+	}
 }
