--- a/admin/website-angular/src/app/pages/+setup/+merchants/merchants.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/merchants.component.html
@@ -21,10 +21,18 @@
 							</button>
 						</nb-step>
 						<nb-step label="Basic info">
-							<ea-merchants-setup-basic-info></ea-merchants-setup-basic-info>
+							<ea-merchants-setup-basic-info
+								#basicInfo
+							></ea-merchants-setup-basic-info>
 
 							<button nbButton nbStepperPrevious>PREV</button>
-							<button nbButton nbStepperNext>NEXT</button>
+							<button
+								nbButton
+								nbStepperNext
+								[disabled]="!basicInfo.formValid"
+							>
+								NEXT
+							</button>
 						</nb-step>
 						<nb-step label="Contact info">
 							<h3>Contact info</h3>
