--- a/admin/website-angular/src/app/@shared/warehouse/warehouse-mutation/warehouse-mutation.component.html
+++ b/admin/website-angular/src/app/@shared/warehouse/warehouse-mutation/warehouse-mutation.component.html
@@ -30,7 +30,7 @@
 		[title]="
 			'WAREHOUSE_VIEW.MUTATION.WIZARD_TITLES.CONTACT_INFO' | translate
 		"
-		[isValid]="contactInfo.valid"
+		[isValid]="contactInfoForm?.validForm"
 	>
 		<div class="pt-5"></div>
 		<ea-warehouse-contact-info-form
