feat(ever-admin): added step "Contact info", in Setup Merchants page EV-1190

--- a/admin/website-angular/src/app/@shared/warehouse/forms/contact-info/contact-info-form.component.html
+++ b/admin/website-angular/src/app/@shared/warehouse/forms/contact-info/contact-info-form.component.html
@@ -61,6 +61,8 @@
 				</div>
 			</div>
 		</div>
+
+		<!-- TODO add translate -->
 		<div class="form-group row">
 			<div class="col-sm-6">
 				<nb-checkbox
