--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/account/account.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/account/account.component.html
@@ -28,9 +28,7 @@
 					*ngIf="email.invalid && (email.dirty || email.touched)"
 				>
 					<span *ngIf="email.errors.required">Email is required</span>
-					<span *ngIf="email.errors.email"
-						>Email must be a valid email address</span
-					>
+					<span *ngIf="email.errors.email">Invalid email format</span>
 				</small>
 			</div>
 			<div class="form-group col-md-6">
