--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/instructions/instructions.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/instructions/instructions.component.html
@@ -9,5 +9,8 @@
 		<div *ngIf="stepper.index === 1">
 			TODO add instructions for Basic info
 		</div>
+		<div *ngIf="stepper.index === 2">
+			TODO add instructions for Contact info
+		</div>
 	</nb-card-body>
 </nb-card>
