feat(ever-admin): initialize step "Location", in Setup Merchants page EV-1191

--- a/admin/website-angular/src/app/pages/+setup/+merchants/merchants.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/merchants.component.html
@@ -49,7 +49,7 @@
 							</button>
 						</nb-step>
 						<nb-step label="Location">
-							<h3>Location</h3>
+							<ea-merchants-setup-location></ea-merchants-setup-location>
 
 							<button nbButton nbStepperPrevious>PREV</button>
 							<button nbButton nbStepperNext>
