feat(ever-admin): finished Location step, in Setup Merchants EV-1191

--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/instructions/instructions.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/instructions/instructions.component.html
@@ -12,5 +12,8 @@
 		<div *ngIf="stepper.index === 2">
 			TODO add instructions for Contact info
 		</div>
+		<div *ngIf="stepper.index === 3">
+			TODO add instructions for Location
+		</div>
 	</nb-card-body>
 </nb-card>
