feat(ever-admin): added step "Payments" in Setup Merchants EV-1192

--- a/admin/website-angular/src/app/pages/+setup/+merchants/merchants.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/merchants.component.html
@@ -63,7 +63,7 @@
 							</button>
 						</nb-step>
 						<nb-step label="Payments">
-							<h3>Payments</h3>
+							<ea-merchants-setup-payments></ea-merchants-setup-payments>
 
 							<button nbButton nbStepperPrevious>PREV</button>
 							<button nbButton nbStepperNext>
