feat(ever-admin): added "Payments" step for instructions EV-1192

--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/instructions/instructions.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/instructions/instructions.component.html
@@ -15,5 +15,8 @@
 		<div *ngIf="stepper.index === 3">
 			TODO add instructions for Location
 		</div>
+		<div *ngIf="stepper.index === 4">
+			TODO add instructions for Payments
+		</div>
 	</nb-card-body>
 </nb-card>
