feat(ever-admin): added step "Manufacturing" in Setup Merchants EV-1193

--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/instructions/instructions.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/instructions/instructions.component.html
@@ -18,5 +18,8 @@
 		<div *ngIf="stepper.index === 4">
 			TODO add instructions for Payments
 		</div>
+		<div *ngIf="stepper.index === 5">
+			TODO add instructions for Manufacturing
+		</div>
 	</nb-card-body>
 </nb-card>
