--- a/admin/website-angular/src/app/pages/+setup/+merchants/merchants.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/merchants.component.html
@@ -71,7 +71,7 @@
 							</button>
 						</nb-step>
 						<nb-step label="Manufacturing">
-							<h3>Manufacturing</h3>
+							<ea-merchants-setup-manufacturing></ea-merchants-setup-manufacturing>
 
 							<button nbButton nbStepperPrevious>PREV</button>
 							<button nbButton nbStepperNext>
