feat(ever-admin): initialize step "Delivery & Takeaway Settings", in Setup Merchants page EV-1194

--- a/admin/website-angular/src/app/pages/+setup/+merchants/merchants.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/merchants.component.html
@@ -79,7 +79,7 @@
 							</button>
 						</nb-step>
 						<nb-step label="Delivery & Takeaway Settings">
-							<h3>Delivery & Takeaway Settings</h3>
+							<ea-merchants-setup-delivery-takeaway></ea-merchants-setup-delivery-takeaway>
 
 							<button nbButton nbStepperPrevious>PREV</button>
 							<button nbButton nbStepperNext>
