feat(ever-admin): initialize step "Orders Settings" in Setup Merchants EV-1195

--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/instructions/instructions.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/instructions/instructions.component.html
@@ -21,5 +21,11 @@
 		<div *ngIf="stepper.index === 5">
 			TODO add instructions for Manufacturing
 		</div>
+		<div *ngIf="stepper.index === 6">
+			TODO add instructions for Delivery & Takeaway Settings
+		</div>
+		<div *ngIf="stepper.index === 7">
+			TODO add instructions for Orders Settings
+		</div>
 	</nb-card-body>
 </nb-card>
