--- a/admin/website-angular/src/app/pages/+setup/+merchants/merchants.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/merchants.component.html
@@ -87,7 +87,7 @@
 							</button>
 						</nb-step>
 						<nb-step label="Orders Settings">
-							<h3>Orders Settings</h3>
+							<ea-merchants-setup-orders-settings></ea-merchants-setup-orders-settings>
 
 							<button nbButton nbStepperPrevious>PREV</button>
 							<button nbButton nbStepperNext>
