--- a/carrier/mobile-ionic/src/components/menu/menu.component.html
+++ b/carrier/mobile-ionic/src/components/menu/menu.component.html
@@ -23,7 +23,9 @@
 						routerLinkActive="activated"
 					>
 						<ion-icon name="bicycle"></ion-icon>
-						<ion-label>Main</ion-label>
+						<ion-label>
+							{{ 'MENU.MAIN' | translate }}
+						</ion-label>
 					</ion-item>
 
 					<ion-item
@@ -32,11 +34,15 @@
 						routerLinkActive="activated"
 					>
 						<ion-icon name="card"></ion-icon>
-						<ion-label>Deliveries</ion-label>
+						<ion-label>
+							{{ 'MENU.DELIVERIES' | translate }}
+						</ion-label>
 					</ion-item>
 
 					<ion-item disabled="true">
-						<ion-label>Settings</ion-label>
+						<ion-label>
+							{{ 'MENU.SETTINGS' | translate }}
+						</ion-label>
 					</ion-item>
 
 					<ion-item
@@ -45,7 +51,9 @@
 						routerLinkActive="activated"
 					>
 						<ion-icon name="globe"></ion-icon>
-						<ion-label>Language</ion-label>
+						<ion-label>
+							{{ 'MENU.LANGUAGE' | translate }}
+						</ion-label>
 					</ion-item>
 
 					<ion-item
@@ -54,7 +62,9 @@
 						routerLinkActive="activated"
 					>
 						<ion-icon name="information-circle-outline"></ion-icon>
-						<ion-label>About Us</ion-label>
+						<ion-label>
+							{{ 'MENU.ABOUT_US' | translate }}
+						</ion-label>
 					</ion-item>
 
 					<ion-item
@@ -63,7 +73,9 @@
 						routerLinkActive="activated"
 					>
 						<ion-icon name="paper"></ion-icon>
-						<ion-label>Terms of Use</ion-label>
+						<ion-label>
+							{{ 'MENU.TERMS_OF_USE' | translate }}
+						</ion-label>
 					</ion-item>
 				</ion-menu-toggle>
 			</ion-item-group>
