fix(ever-merchant): small fixing EV-1194

--- a/admin/website-angular/src/app/@shared/carrier/forms/basic-info/basic-info-form.component.html
+++ b/admin/website-angular/src/app/@shared/carrier/forms/basic-info/basic-info-form.component.html
@@ -192,7 +192,7 @@
 			<div class="form-group row">
 				<!-- TODO add translate -->
 				<nb-checkbox class="col-sm-12" formControlName="isSharedCarrier"
-					>Carrier Can be Shared?</nb-checkbox
+					>Carrier can be shared?</nb-checkbox
 				>
 				<nb-checkbox class="col-sm-12" formControlName="isActive">
 					{{
