--- a/merchant/tablet-ionic/src/pages/+carriers/add-carriers-popup/add-new-carrier/account/account-form.component.html
+++ b/merchant/tablet-ionic/src/pages/+carriers/add-carriers-popup/add-new-carrier/account/account-form.component.html
@@ -63,7 +63,7 @@
 				></ion-checkbox>
 
 				<!-- TODO add translate -->
-				<ion-label>Carrier Can be Shared?</ion-label>
+				<ion-label>Carrier can be shared?</ion-label>
 			</ion-item>
 		</ion-col>
 
