feat(ever-admin): manage property "carriersIds" EV-1194

--- a/admin/website-angular/src/app/@shared/warehouse/forms/basic-info/basic-info-form.component.html
+++ b/admin/website-angular/src/app/@shared/warehouse/forms/basic-info/basic-info-form.component.html
@@ -183,9 +183,9 @@
 
 				<div *ngIf="hasRestrictedCarriers.value">
 					<ss-multiselect-dropdown
-						[options]="carriersOptions$ | async"
+						[options]="carriersOptions"
 						[settings]="{ displayAllSelectedText: true }"
-						formControlName="usedCarriersIds"
+						formControlName="carriersIds"
 						class="carriers-dropdown"
 					>
 					</ss-multiselect-dropdown>
