--- a/admin/website-angular/src/app/@shared/warehouse/forms/warehouse-manage-tabs/details/warehouse-manage-tabs-details.component.html
+++ b/admin/website-angular/src/app/@shared/warehouse/forms/warehouse-manage-tabs/details/warehouse-manage-tabs-details.component.html
@@ -147,7 +147,7 @@
 					<ss-multiselect-dropdown
 						[options]="carriersOptions$ | async"
 						[settings]="{ displayAllSelectedText: true }"
-						formControlName="usedCarriersIds"
+						formControlName="carriersIds"
 						class="carriers-dropdown"
 					>
 					</ss-multiselect-dropdown>
