feat(ever-admin): improved shared carriers table EV-1194

--- a/admin/website-angular/src/app/pages/+carriers/carriers.component.html
+++ b/admin/website-angular/src/app/pages/+carriers/carriers.component.html
@@ -26,6 +26,9 @@
 		</button>
 	</nb-card-header>
 	<nb-card-body [nbSpinner]="loading">
-		<ea-carriers-smart-table #carriersTable></ea-carriers-smart-table>
+		<ea-carriers-smart-table
+			[perPage]="perPage"
+			#carriersTable
+		></ea-carriers-smart-table>
 	</nb-card-body>
 </nb-card>
